server: switch JVM to Generational ZGC; add deploy .gitignore
Matches scripts/build-server.sh (ZGC's sub-ms pauses suit the server's
allocation rate better than G1 at a 32G heap). USE_AIKAR_FLAGS=false; the ZGC
flags live in JVM_XX_OPTS (heap stays on INIT/MAX_MEMORY). -XX:+ZGenerational is
required on Java 21.

Add server/.gitignore (box-local state: .env, data/, logs, lock/sentinel) so the
dir is ready to become the root of a dedicated derpack-org/derpack-server repo.

https://claude.ai/code/session_01NNXA661XEUPz8i4jWREUHh